--- a/assets/style.css
+++ b/assets/style.css
@@ -22,7 +22,7 @@
 }
 .active
 {
-    color: #D3D3D3 !important;
+    color: #000 !important;
 }
 .navbar-toggler .fa
 {
@@ -49,7 +49,15 @@
 }
 .info h1
 {
-    font-size: 30px;
+    -webkit-text-stroke: 1px black;
+   color: white;
+   text-shadow:
+       3px 3px 0 #000,
+     -1px -1px 0 #000,  
+      1px -1px 0 #000,
+      -1px 1px 0 #000,
+       1px 1px 0 #000;
+    font-size: 36px;
     font-family: 'Pacifico', cursive;
 }
 .footer-widget
@@ -88,4 +96,12 @@
     {
         background-image: linear-gradient(#ff9800, #df563b)
     }
+}
+html, body {
+    height: 100%;
+    background:url("https://res.cloudinary.com/di5e3ww0o/image/upload/v1562009971/background_o0x27i.png") no-repeat center center fixed;
+    -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
